argos_test/simple-svc.yaml
apiVersion: v1
kind: Service

metadata:
  name: simple-svc
  namespace: argocd
spec:
  selector:
    app: simplAppe
  
  ports:
  - protocol: TCP
    name: http
    port: 8080
    targetPort: http
