argos_test/simple-ing.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress
metadata:
  name: simple-ing
  namespace: argocd
spec:
  ingressClassName: nginx
  rules:
  - host: "simple.192.168.49.sslip.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-svc
            port:
              number: 8080
